external-crates/move/crates/move-compiler/tests/move_2024/naming/use_fun_no_args.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E02017]: invalid 'use fun' declaration
  ┌─ tests/move_2024/naming/use_fun_no_args.move:6:5
  │
4 │     public fun no() { abort 0 }
  │                -- But 'a::m::no' takes no arguments
5 │ 
6 │     use fun no as Y.no;
  │     ^^^^^^^^^^^^^^^^^^^ Invalid 'use fun' for 'a::m::Y.no'. Expected a 'a::m::Y' type as the first argument (either by reference '&' '&mut' or by value)
